--- a/less/home-page.less
+++ b/less/home-page.less
@@ -207,12 +207,19 @@ h2 {
 		li {
 			padding-top: 3%;
 			padding-bottom: 3%;
+			line-height: 1.75;
 		}
 	}
 
 	.devdetails {
-		width: 55%;
-		justify-content: left;
+		display: flex;
+		width: 60%;
+		flex-wrap: nowrap;
+		justify-content: space-evenly;
+		.codeItem {
+			padding-left: 3%;
+			padding-right: 3%;
+		}
 	}
 
 	h3 {
